[package]
name = "coin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.8"
rand = "0.8.5"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
ethnum = "1.5.0"
rouille = "3.6.2"
ctrlc = "3.4.4"
serde_json = "1.0"
hex = "0.4.3"
# tera = "1.19.1"

[dev-dependencies]
tempfile = "3.10.1"